+ -> Addition
^ -> Change
- -> Removed
! -> Note

12-Aug-2011 Mark Dexter
 # [#26448] global configuration broken in IE9
 # [#26533] Sync more changes from platform 11.2
 # [#26452] Warning in the search
 # [#26445] Undefined index: CLIENT in updater\adapters\collection.php
 # [#26501] [patch] fix for router notices *
 # [#26594] Update TinyMCE to version 3.4.4
 # [#26601] Powered By 1.6 image

08-Aug-2011 Jean-Marie Simonet
 #$ [#26535] Incorrectly labeled folder in the Media manager + Options tips
 # [#26568] Missing return in modeladmin.php. Thanks Jacob. (lib change)
 # [#26603] Flash uploader is broken. Thanks Rouven.
 
03-Aug-2011 Jean-Marie Simonet
 $ Updating installation language files: hr-HR, pt-PT
 #$ [#26543] com_modules language has a typo. Thanks Daniel and Elin.

01-Aug-2011 Mark Dexter
 # [#26459] Alternative Menu Items / JCategoryNode Showing Errors

28-Jul-2011 Jean-Marie Simonet
 # [#26510] wrong file name. Thanks Bill
 $ [#26499] Incorrect English not en-GB. Thanks Jacob 
 $ [#26497] Incorrect English in template. Thanks Bill
 $ [#26500] Improve English grammar. Thanks Bill.
 $ [#26416] Incorrect terminology in Language Switcher module. Thanks Jacob.
 
25-Jul-2011 Jean-Marie Simonet
 # [#26490] Untranslated Strings DELETE="Delete" Media Manager > Details View in iframe
 # [#26470] No translation in title column of module manager (lib change)
 # [#26483] Syndication RSS Feeds (module) not working in Joomla! 1.7.0 Stable
 # [#26446] Loadposition does not load more then one module. Thanks Elin.

22-Jul-2011 Jean-Marie Simonet
 $ Updating installation ini files: pl-PL, ta-IN, it-IT

20-Jul-2011 Jean-Marie Simonet
 # Removing install check
 # [#26443] PHP version check at installation says Joomla 1.6
 # [#26432] Banners Manager - trash icon visible when no trashed banners. Thanks Bill.
 # [#26433] banner manager- clients - empty trash icon. Thanks Bill.
 #  [#26396] Fix some mistyped and @package names in the CMS. Thanks Rune.
