@@ -41,7 +41,7 @@ class JHtmlInstallation
 				$on = 1;
 		}
 
- 		$html = '<h1>'.JText::_('INSTL_STEPS_TITLE').'</h1>' .
+ 		$html = '<h2>'.JText::_('INSTL_STEPS_TITLE').'</h2>' .
 			'<div class="step'.($on == 1 ? ' active' : '').'" id="language">'.JText::_('INSTL_STEP_1_LABEL').'</div>' .
 			'<div class="step'.($on == 2 ? ' active' : '').'" id="preinstall">'.JText::_('INSTL_STEP_2_LABEL').'</div>' .
 			'<div class="step'.($on == 3 ? ' active' : '').'" id="license">'.JText::_('INSTL_STEP_3_LABEL').'</div>' .
