@@ -18,23 +18,23 @@ defined('_JEXEC') or die;
 		<div class="button1-left"><div class="next"><a href="index.php?view=database" onclick="return Install.goToPage('database');" rel="prev" title="<?php echo JText::_('JPrevious'); ?>"><?php echo JText::_('JPrevious'); ?></a></div></div>
 <?php endif; ?>
 	</div>
-	<span class="steptitle"><?php echo JText::_('INSTL_FTP'); ?></span>
+	<h2><?php echo JText::_('INSTL_FTP'); ?></h2>
 </div>
 
 <form action="index.php" method="post" id="adminForm" class="form-validate">
 	<div id="installer">
 		<div class="m">
-			<h2>
+			<h3>
 				<?php echo JText::_('INSTL_FTP_TITLE'); ?>
-			</h2>
+			</h3>
 			<div class="install-text">
 				<?php echo JText::_('INSTL_FTP_DESC'); ?>
 			</div>
 			<div class="install-body">
 				<div class="m">
-					<h3 class="title-smenu" title="<?php echo JText::_('INSTL_BASIC_SETTINGS'); ?>">
+					<h4 class="title-smenu" title="<?php echo JText::_('INSTL_BASIC_SETTINGS'); ?>">
 						<?php echo JText::_('INSTL_BASIC_SETTINGS'); ?>
-					</h3>
+					</h4>
 					<div class="section-smenu">
 						<table class="content2">
 							<tr>
@@ -86,9 +86,9 @@ defined('_JEXEC') or die;
 						<br /><br />
 					</div>
 
-					<h3 class="title-smenu moofx-toggler" title="<?php echo JText::_('INSTL_ADVANCED_SETTINGS'); ?>">
+					<h4 class="title-smenu moofx-toggler" title="<?php echo JText::_('INSTL_ADVANCED_SETTINGS'); ?>">
 						<a href="#"><?php echo JText::_('INSTL_ADVANCED_SETTINGS'); ?></a>
-					</h3>
+					</h4>
 					<div class="section-smenu moofx-slider">
 						<table class="content2">
 							<tr id="host">
